fix css wrap transform property

--- a/src/styles/basic/_wrap.scss
+++ b/src/styles/basic/_wrap.scss
@@ -5,5 +5,5 @@
   position: relative;
   z-index: 1;
 
-  transform: translate3d(0, 0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
